fix error of display

--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -54,7 +54,7 @@
 					<td><input type="text" class="input-form datepicker" title="{{tooltips['ngayDinhTen']}}" name="ngayDinhTen" ng-model="data.ngayDinhTen"></td>
 				</tr>
 				<tr>
-					<td><label>09. Tên Việt Nam (phổ thông) <span class="has-required">(*)</span>:</label></td>
+					<td><label>09. Tên Việt Nam (phổ thông):</label></td>
 					<td><input type="text" title="{{tooltips['tenVietNam']}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -661,7 +661,7 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU THÔNG TIN KHÁC</h3>
 				<tr>
-					<td><label>70. Thông tin khác</label></td>
+					<td><label>71. Thông tin khác</label></td>
 					<td><input type="text" title="{{tooltips['thongTinKhac9']}}" name="thongTinKhac9" ng-model="data.thongTinKhac9" class="input-form"></td>
 				</tr>
 			</table>
