--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -110,7 +110,7 @@
 					<td><input type="text" class="input-form datepicker" title="{{tooltips['ngayDinhTen']}}" name="ngayDinhTen" ng-model="data.ngayDinhTen" ></td>
 				</tr>
 				<tr>
-					<td><label>09. Tên Việt Nam (phổ thông) <span class="has-required">(*)</span>:</label></td>
+					<td><label>09. Tên Việt Nam (phổ thông):</label></td>
 					<td><input type="text" title="{{tooltips['tenVietNam']}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
@@ -167,7 +167,7 @@
 								</td>
 							</tr>
 							<tr>
-								<td><span>Chiều rộng<span class="has-required"> (*)</span>: </span></td>
+								<td><span>Chiều rộng: </span></td>
 								<td>					    
 								    <span class="box">
 								      <input type="text" title="{{tooltips['chieuRong']}}" name="chieuRong" ng-model="data.chieuRong" class="datatext" id="datatext">
@@ -181,7 +181,7 @@
 							</tr>
 						
 							<tr>
-								<td><span>Chiều dài<span class="has-required"> (*)</span>: </span></td>
+								<td><span>Chiều dài: </span></td>
 								<td>					    
 								    <span class="box">
 								      <input type="text" title="{{tooltips['chieuDai']}}" name="chieuDai" ng-model="data.chieuDai" class="datatext" id="datatext">
