--- a/app/views/modals/dialogs.blade.html
+++ b/app/views/modals/dialogs.blade.html
@@ -5,7 +5,7 @@
 	<div class="modal-body">
 		<p>{{message}}</p>
 	</div>
-<!-- 	<div class="modal-footer">
+	<div class="modal-footer">
 	    <button class="btn btn-primary" type="button" ng-click="ok()">Okay</button>
-	</div> -->
+	</div>
 </div>
