add download zip button

--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -15,7 +15,8 @@
 			<div class="dropdown-content" ng-controller="ModalCtrl" style="width: 300px;">
 			    <a ng-click="export('pdf')"><span class="glyphicon glyphicon-download"></span> Xuất pdf</a>
 			    <a ng-click="export('docx')"><span class="glyphicon glyphicon-download"></span> Xuất docx</a>
-			    <a ng-click="export('xlsx')"><span class="glyphicon glyphicon-download"></span> Xuất xlsx</a>	    
+			    <a ng-click="export('xlsx')"><span class="glyphicon glyphicon-download"></span> Xuất xlsx</a>
+			    <a ng-click="export('zip')"><span class="glyphicon glyphicon-download"></span> Xuất zip</a>
 			</div>
 		</div>
 	<button class="btn btn-success" style="cursor: pointer; margin-bottom: 10px; width: 300px; margin-left: 15px;" ng-click="selectAll()"><span class="glyphicons glyphicons-ok"></span> Select all</button>
