--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -33,7 +33,17 @@
 				</tr>
 				<tr>
 					<td><label>05. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips['thongTinKhac1']}}" name="thongTinKhac1" ng-model="data.thongTinKhac1" class="input-form"></td>
+					<td>
+						<table>
+							<tr>
+								<td><input type="text" ng-model="data.thongTinKhac1Str" title="{{tooltips['thongTinKhac1Str']}}" name="thongTinKhac1Str" class="input-form"></td>
+								<td>
+									<input type="file" multiple ng-model="data.thongTinKhac1File" class="inputfile customfile" data-multiple-caption="{count} file is selected" id="thongTinKhac1File" name ="thongTinKhac1File">
+									<label for="thongTinKhac1File" title="{{tooltips['thongTinKhac1File']}}"><span>No file chosen</span><strong>Choose file</strong></label>
+								</td>
+							</tr>
+						</table>
+					</td>
 				</tr>
 			</table>
 		</div>
@@ -70,7 +80,17 @@
 				</tr>
 				<tr>
 					<td><label>13. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips['thongTinKhac2']}}" name="thongTinKhac2" ng-model="data.thongTinKhac2" class="input-form"></td>
+					<td>
+						<table>
+							<tr>
+								<td><input type="text" ng-model="data.thongTinKhac2Str" title="{{tooltips['thongTinKhac2Str']}}" name="thongTinKhac2Str" class="input-form"></td>
+								<td>
+									<input type="file" multiple ng-model="data.thongTinKhac2File" class="inputfile customfile" data-multiple-caption="{count} file is selected" id="thongTinKhac2File" name ="thongTinKhac2File">
+									<label for="thongTinKhac2File" title="{{tooltips['thongTinKhac2File']}}"><span>No file chosen</span><strong>Choose file</strong></label>
+								</td>
+							</tr>
+						</table>
+					</td>
 				</tr>
 			</table>
 		</div>
@@ -171,7 +191,17 @@
 				</tr>
 				<tr>
 					<td><label>18. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips['thongTinKhac3']}}" name="thongTinKhac3" ng-model="data.thongTinKhac3" class="input-form"></td>
+					<td>
+						<table>
+							<tr>
+								<td><input type="text" ng-model="data.thongTinKhac3Str" title="{{tooltips['thongTinKhac3Str']}}" name="thongTinKhac3Str" class="input-form"></td>
+								<td>
+									<input type="file" multiple ng-model="data.thongTinKhac3File" class="inputfile customfile" data-multiple-caption="{count} file is selected" id="thongTinKhac3File" name ="thongTinKhac3File">
+									<label for="thongTinKhac3File" title="{{tooltips['thongTinKhac3File']}}"><span>No file chosen</span><strong>Choose file</strong></label>
+								</td>
+							</tr>
+						</table>
+					</td>
 				</tr>	
 			</table>
 		</div>
@@ -300,7 +330,17 @@
 				</tr>
 				<tr>
 					<td><label>28. Thông tin khác </label></td>
-					<td><input type="text" ng-model="data.thongTinKhac4" title="{{tooltips['thongTinKhac4']}}" name="thongTinKhac4" class="input-form"></td>
+					<td>
+						<table>
+							<tr>
+								<td><input type="text" ng-model="data.thongTinKhac4Str" title="{{tooltips['thongTinKhac4Str']}}" name="thongTinKhac4Str" class="input-form"></td>
+								<td>
+									<input type="file" multiple ng-model="data.thongTinKhac4File" class="inputfile customfile" data-multiple-caption="{count} file is selected" id="thongTinKhac4File" name ="thongTinKhac4File">
+									<label for="thongTinKhac4File" title="{{tooltips['thongTinKhac4File']}}"><span>No file chosen</span><strong>Choose file</strong></label>
+								</td>
+							</tr>
+						</table>
+					</td>
 				</tr>
 			</table>
 		</div>
@@ -373,7 +413,17 @@
 
 				<tr>
 					<td><label>38. Thông tin khác </label></td>
-					<td><input type="text" ng-model="data.thongTinKhac5" title="{{tooltips['thongTinKhac5']}}" name="thongTinKhac5" class="input-form"></td>
+					<td>
+						<table>
+							<tr>
+								<td><input type="text" ng-model="data.thongTinKhac5Str" title="{{tooltips['thongTinKhac5Str']}}" name="thongTinKhac5Str" class="input-form"></td>
+								<td>
+									<input type="file" multiple ng-model="data.thongTinKhac5File" class="inputfile customfile" data-multiple-caption="{count} file is selected" id="thongTinKhac5File" name ="thongTinKhac5File">
+									<label for="thongTinKhac5File" title="{{tooltips['thongTinKhac5File']}}"><span>No file chosen</span><strong>Choose file</strong></label>
+								</td>
+							</tr>
+						</table>
+					</td>
 				</tr>
 			</table>
 		</div>
@@ -451,7 +501,17 @@
 				</tr>
 				<tr>
 					<td><label>44. Thông tin khác </label></td>
-					<td><input type="text" ng-model="data.thongTinKhac6" title="{{tooltips['thongTinKhac6']}}" name="thongTinKhac6" class="input-form"></td>
+					<td>
+						<table>
+							<tr>
+								<td><input type="text" ng-model="data.thongTinKhac6Str" title="{{tooltips['thongTinKhac6Str']}}" name="thongTinKhac6Str" class="input-form"></td>
+								<td>
+									<input type="file" multiple ng-model="data.thongTinKhac6File" class="inputfile customfile" data-multiple-caption="{count} file is selected" id="thongTinKhac6File" name ="thongTinKhac6File">
+									<label for="thongTinKhac6File" title="{{tooltips['thongTinKhac6File']}}"><span>No file chosen</span><strong>Choose file</strong></label>
+								</td>
+							</tr>
+						</table>
+					</td>
 				</tr>
 			</table>
 		</div>
@@ -550,7 +610,17 @@
 				</tr>
 				<tr>
 					<td><label>56. Thông tin khác </label></td>
-					<td><input type="text" ng-model="data.thongTinKhac7" title="{{tooltips['thongTinKhac7']}}" name="thongTinKhac7" class="input-form"></td>
+					<td>
+						<table>
+							<tr>
+								<td><input type="text" ng-model="data.thongTinKhac7Str" title="{{tooltips['thongTinKhac7Str']}}" name="thongTinKhac7Str" class="input-form"></td>
+								<td>
+									<input type="file" multiple ng-model="data.thongTinKhac7File" class="inputfile customfile" data-multiple-caption="{count} file is selected" id="thongTinKhac7File" name ="thongTinKhac7File">
+									<label for="thongTinKhac7File" title="{{tooltips['thongTinKhac7File']}}"><span>No file chosen</span><strong>Choose file</strong></label>
+								</td>
+							</tr>
+						</table>
+					</td>
 				</tr>
 			</table>
 		</div>
@@ -651,7 +721,17 @@
 				</tr>
 				<tr>
 					<td><label>70. Thông tin khác </label></td>
-					<td><input type="text" ng-model="data.thongTinKhac8" title="{{tooltips['thongTinKhac8']}}" name="thongTinKhac8" class="input-form"></td>
+					<td>
+						<table>
+							<tr>
+								<td><input type="text" ng-model="data.thongTinKhac8Str" title="{{tooltips['thongTinKhac8Str']}}" name="thongTinKhac8Str" class="input-form"></td>
+								<td>
+									<input type="file" multiple ng-model="data.thongTinKhac8File" class="inputfile customfile" data-multiple-caption="{count} file is selected" id="thongTinKhac8File" name ="thongTinKhac8File">
+									<label for="thongTinKhac8File" title="{{tooltips['thongTinKhac8File']}}"><span>No file chosen</span><strong>Choose file</strong></label>
+								</td>
+							</tr>
+						</table>
+					</td>
 				</tr>
 			</table>
 		</div>
@@ -660,7 +740,17 @@
 				<h3 class="h3-title">NHÓM DỮ LIỆU THÔNG TIN KHÁC</h3>
 				<tr>
 					<td><label>70. Thông tin khác</label></td>
-					<td><input type="text" title="{{tooltips['thongTinKhac9']}}" name="thongTinKhac9" ng-model="data.thongTinKhac9" class="input-form"></td>
+					<td>
+						<table>
+							<tr>
+								<td><input type="text" ng-model="data.thongTinKhac9Str" title="{{tooltips['thongTinKhac9Str']}}" name="thongTinKhac9Str" class="input-form"></td>
+								<td>
+									<input type="file" multiple ng-model="data.thongTinKhac9File" class="inputfile customfile" data-multiple-caption="{count} file is selected" id="thongTinKhac9File" name ="thongTinKhac9File">
+									<label for="thongTinKhac9File" title="{{tooltips['thongTinKhac9File']}}"><span>No file chosen</span><strong>Choose file</strong></label>
+								</td>
+							</tr>
+						</table>
+					</td>
 				</tr>
 			</table>
 		</div>
