notifications use modal

--- a/app/views/modals/dialogs.blade.html
+++ b/app/views/modals/dialogs.blade.html
@@ -6,6 +6,6 @@
 		<p>{{message}}</p>
 	</div>
 	<div class="modal-footer">
-	    <button class="btn btn-primary" type="button" ng-click="ok()">Okay</button>
+	    <button class="btn btn-primary" type="button" ng-click="ok()">Ok</button>
 	</div>
 </div>
