--- a/views/manager/users.ejs
+++ b/views/manager/users.ejs
@@ -254,7 +254,10 @@
 	}
 
 	function assignTo(userId) {
-		
+		console.log({
+			userId: userId,
+			localIP: getLocalIP()
+		});
 		$.ajax({
 			url: '/manager/assign/',
 			method: 'POST',
