--- a/views/manager/logs.ejs
+++ b/views/manager/logs.ejs
@@ -100,7 +100,11 @@
 												<td><a title="Lọc nhật ký theo hành động này" href="<%= path + '?action=' + action %>"><h4><%= actions[action].label %></h4></a> </td>
 												<td><a title="Lọc nhật ký theo loại dữ liệu này" href="<%= path + '?type=' + forms[log.objType].objectModelName %>"><span><%= forms[log.objType].objectModelLabel %></span></a>
 												</td>
-												<td><a title="Lọc nhật ký về mẫu dữ liệu này" href="<%= path + '?object=' + logs[i].obj1._id %>"><span> <%= logs[i].obj1._id.toString().substring(logs[i].obj1._id.toString().length - 5) %></span></a></td>
+												<td>
+													<% if (action != 'add-mdt') { %>
+													<a title="Lọc nhật ký về mẫu dữ liệu này" href="<%= path + '?object=' + logs[i].obj1._id %>"><span> <%= logs[i].obj1._id.toString().substring(logs[i].obj1._id.toString().length - 5) %></span></a>
+													<% } %>
+												</td>
 												<td>
 													<% var basePath = forms[log.objType].basePath; %>
 													<% if (action == 'create') { %>
