--- a/views/manager/users.ejs
+++ b/views/manager/users.ejs
@@ -115,7 +115,7 @@
 											%>
 											<tr>
 												<td><img title="<%= u.username %>" width="50px" class="img-responsive" src="/<%= ('avatar' in u && 'original' in u.avatar) ? u.avatar.original : 'admin/dist/img/user2-160x160.jpg' %>" ></td>
-												<td><%= u.fullname %></td>
+												<td><a href="<%= '/users/' + u._id %>"><%= u.fullname %></a></td>
 												<td><span class="<%= u.level.class %>" title="<%= u.maDeTai %>"><%= u.level.name %></span></td>
 												<% var date = new Date(u.lastLogin) %>
 												<td><%= (date != 'Invalid Date') ? [date.getFullYear(), date.getMonth() + 1, date.getDate()].join('/') + ', ' + [date.getHours(), date.getMinutes(), date.getSeconds()].join(':') : '' %></td>
